Fix blurry icons

--- a/src/index.scss
+++ b/src/index.scss
@@ -152,6 +152,7 @@ canvas,
   height: 20px;
   font-size: 16px;
   padding: 2px;
+  will-change: auto;
 }
 
 #search_bar {
